2010-12-12  Kai Habel  <kai.habel@gmx.de>

	* plot/view.m: Fix bugs with respect to number if inputs and argument
	handling.

2010-12-12  Kai Habel  <kai.habel@gmx.de>

	* plot/view.m: Make view more compatible. Allow cartesian
	coordinates and axes handle arguments.

2010-12-10  Ben Abbott  <bpabbott@mac.com>

	* io/strread.m: Don't require space between format specifiers.

2010-12-10  Rik  <octave@nomad.inbox5.com>

	* testfun/speed.m: Eliminate line continuation in function definition.

2010-12-10  Kai Habel  <kai.habel@gmx.de>

	* plot/private/__pie__.m: Add missing slice option to pie and
	pie3 function.
	* plot/pie.m, plot/pie3.m: Add new demo.

2010-12-10  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* statistics/tests/kolmogorov_smirnov_test.m: Add tests.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* plot/private/__pie__.m: Provide diagnositc for invalid
	optional arguments.  Use caller name instead of __pie__ in error
	messages.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* statistics/tests/kolmogorov_smirnov_test.m: Try both DIST_cdf
	and DISTcdf functions.  Always use feval to call CDF function.
	Bug #31838.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Set major and grid linewidths from
	axis linewidth property.  Bug #31755.

2010-12-09  Rik  <octave@nomad.inbox5.com>

	* plot/__print_parse_opts__.m: Convert print resolution from char to
	double.  Fixes Bug #31834.

2010-12-09  Rik  <octave@nomad.inbox5.com>

	* plot/private/__pie__.m: Allow logical indices for 'explode' variable.

2010-12-09  Kai Habel  <kai.habel@gmx.de>

	* plot/pie3.m, plot/private/__pie__.m: New functions.
	* plot/pie.m: Move __pie__ function to plot/private, in order to be used
	by pie and pie3.
	* miscellaneous/unimplemented.m: Remove pie3.m from list of
	unimplemented functions.

2010-12-09  John W. Eaton  <jwe@octave.org>

	* time/datestr.m: Don't call localtime (mktime (tm)) to fill in
	missing elements of time strcture.  Bug #31079.
